2007-11-21 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* confix2.py --overlayroot
	  Makes it possible to "overlay" the package with a separate tree
	  that contains the Confix2.{pkg,dir} files.
	* Largely eliminated the --use-libtool parameter, by scanning the
	  generated configure.ac file for AC_PROG_LIBTOOL. --use-libtool
	  is still necessary for the damn ConfixSetup default.

2007-10-23 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Fixed bug "[ 1817734 ] Relocated headers leave require objects
	  at source module"

2007-10-22 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* removed libconfix/testutils/find.py

2007-10-21 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Fixed bug "[ 1654643 ] URGENCY_ERROR require need not be
	  resolved immediately"

2007-09-27 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* merged from RB-branches/2.1 (last changed rev. 375 there)
	  * add test libconfix/core/filesys/tests/scan.py
	  * InstalledNode.short_description() was left abstract; fixed.

2007-09-05 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* BuildInfo_CIncludePath_NativeLocal does not carry any
	  autoconfisms anymore.

2007-09-01 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* merged from branches/RB-2.1 (last changed rev. 351 there):
	  * resurrected CALL_MAKE_AND_RESCAN_SYNC() (by popular demand)

2007-09-01 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Conditional local install.
	
	  Before, every header file was copied into the directory
	  $(top_builddir)/confix_include to make it visible to the build
	  of fellow modules in the package. This was mainly done to easily
	  cope with header files that wanted to be visible in a
	  subdirectory, for example as #include <subdir/file.h>. The
	  include path of a module that used this file then only had to be
	  augmented with -I$(top_builddir)/confix_include for any header
	  file that was locally used.

	  Anyway, this was done even for header files that didn't want to